# doctor_voicebot

./: Dockerfile  README.md  brain_of_the_doctor.py  gradio_app.py  pyproject.toml  requirements.txt  voice_of_the_doctor.py  voice_of_the_patient.py
